--- a/.gitignore
+++ b/.gitignore
@@ -460,3 +460,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# VSCode configuration folder
+.vscode/
